[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
ensure_newline_before_comments = true

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.idea
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
ignore_missing_imports = true


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
