[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
ensure_newline_before_comments = true

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.idea
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
ignore_missing_imports = true


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "mamushi"
version = "0.0.4-a2"
description = "Vyper Formatter"
authors = ["benny <benoitb@tutanota.de>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "8.1.3"
black = "23.1.0"
pre-commit = "2.20.0"
types-attrs = "^19.1.0"
lark = ">=1.0.0"
mypy-extensions = "0.4.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=3.0.0"
coverage = ">=6.5.0"
bump2version = ">=1.0.0"

[tool.poetry.scripts]
mamushi = "mamushi.__main__:main"
