[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
install_requires =
  click>=8.0.0
  pathspec>=0.9.0
  lark>=1.0.0
  lark-parser>=0.10.0
py_modules = mamushi

[options.entry_points]
console_scripts =
    mamushi=mamushi:main

[options.extras_require]
dev =
    black==22.6.0
    mypy_extensions==0.4.3
    flake8==5.0.4
    pylint==2.14.5

[options.packages.find]
where = src
exclude =
    tests

[metadata]
name = mamushi
description = Vyper formatter
license = { text = "MIT" }
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
