[bumpversion]
current_version = 0.0.4-a1
commit = False
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.9
install_requires =
	click>=8.0.0
	pathspec>=0.9.0
	lark>=1.0.0
	mypy-extensions==0.4.3
py_modules = mamushi
include_package_data = True

[options.package_data]
mamushi.parsing = *.lark

[options.entry_points]
console_scripts =
	mamushi=mamushi:main

[options.extras_require]
dev =
	black==23.1.0
	pre-commit==2.20.0
	mypy_extensions==0.4.3
	mypy>=0.900
	flake8==5.0.4
	pylint==2.14.5
	pytest>=6.0.0
	pytest-cov>=3.0.0
	coverage>=6.0.0
	bump2version>=1.0.0

[options.packages.find]
where = src
exclude =
	tests

[metadata]
name = mamushi
description = Vyper formatter
license = { text = "MIT" }
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: mamushi.__version__.__version__
url = https://github.com/benber86/mamushi
project_urls =
	Source = https://github.com/benber86/mamushi
	Tracker = https://github.com/benber86/mamushi/issues
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Software Development :: Quality Assurance

[bumpversion:part:release]
optional_value = release
values =
	a
	b
	release

[bumpversion:file:./src/mamushi/__version__.py]

[bumpversion:part:build]

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"
